cabal-version:      3.4
name:               day1
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Laurent René de Cotret
maintainer:         laurent.decotret@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-options
  build-depends:       base >=4.16.0.0 && <5,
                       text >= 2       && <3,
                       attoparsec,
                       filepath,
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  default-language:    GHC2021
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable day1
    import:           common-options
    main-is:          Day1.hs
    hs-source-dirs:   day1

executable day2
    import:           common-options
    main-is:          Day2.hs
    hs-source-dirs:   day2

executable day3
    import:           common-options
    build-depends:    containers
    main-is:          Day3.hs
    hs-source-dirs:   day3