cabal-version:      3.4
name:               day1
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Laurent René de Cotret
maintainer:         laurent.decotret@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-options
  build-depends:       base >=4.16.0.0 && <5,
                       text >= 2       && <3,
                       attoparsec,
                       containers,
                       filepath,
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  default-language:    GHC2021
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable day1
    import:           common-options
    main-is:          Day1.hs
    hs-source-dirs:   day1

executable day2
    import:           common-options
    main-is:          Day2.hs
    hs-source-dirs:   day2

executable day3
    import:           common-options
    main-is:          Day3.hs
    hs-source-dirs:   day3

executable day4
    import:           common-options
    main-is:          Day4.hs
    hs-source-dirs:   day4

executable day5
    import:           common-options
    main-is:          Day5.hs
    hs-source-dirs:   day5

executable day6
    import:           common-options
    main-is:          Day6.hs
    hs-source-dirs:   day6

executable day7
    import:           common-options
    build-depends:    mtl, filepath
    main-is:          Day7.hs
    hs-source-dirs:   day7

executable day8
    import:           common-options
    build-depends:    vector
    main-is:          Day8.hs
    hs-source-dirs:   day8

executable day9
    import:           common-options
    build-depends:    mtl
    main-is:          Day9.hs
    hs-source-dirs:   day9

executable day10
    import:           common-options
    main-is:          Day10.hs
    hs-source-dirs:   day10

executable day11
    import:           common-options
    build-depends:    mtl
    main-is:          Day11.hs
    hs-source-dirs:   day11
